apollo-router/tests/integration/snapshots/integration_tests__integration__subgraph_cache__subgraph_cache_authorization-3.snap
---
source: apollo-router/tests/integration/subgraph_cache.rs
expression: response
---
{
  "data": {
    "me": {
      "id": "1",
      "name": null
    },
    "topProducts": [
      {
        "name": "chair",
        "reviews": [
          {
            "body": "I can sit on it",
            "author": {
              "username": "ada"
            }
          }
        ]
      },
      {
        "name": "table",
        "reviews": [
          {
            "body": "I can sit on it",
            "author": {
              "username": "ada"
            }
          },
          {
            "body": "I can eat on it",
            "author": {
              "username": "charles"
            }
          }
        ]
      }
    ]
  },
  "errors": [
    {
      "message": "Unauthorized field or type",
      "path": [
        "me",
        "name"
      ],
      "extensions": {
        "code": "UNAUTHORIZED_FIELD_OR_TYPE"
      }
    }
  ]
}
