apollo-router/tests/integration/snapshots/integration_tests__integration__subgraph_cache__subgraph_cache_basic-2.snap
---
source: apollo-router/tests/integration/subgraph_cache.rs
expression: "v.as_object().unwrap().get(\"data\").unwrap()"
---
{
  "topProducts": [
    {
      "__typename": "Product",
      "upc": "1",
      "name": "chair"
    },
    {
      "__typename": "Product",
      "upc": "2",
      "name": "table"
    }
  ]
}
