apollo-router/tests/integration/snapshots/integration_tests__integration__subgraph_cache__subgraph_cache_basic.snap
---
source: apollo-router/tests/integration/subgraph_cache.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "chair",
        "reviews": [
          {
            "body": "I can sit on it"
          }
        ]
      },
      {
        "name": "table",
        "reviews": [
          {
            "body": "I can sit on it"
          },
          {
            "body": "I can eat on it"
          }
        ]
      }
    ]
  }
}
