apollo-router/tests/integration/snapshots/integration_tests__integration__subgraph_cache__subgraph_cache_with_nested_field_set-3.snap
---
source: apollo-router/tests/integration/subgraph_cache.rs
expression: "v.as_object().unwrap().get(\"data\").unwrap()"
---
{
  "name": "test"
}
